# tidbytes

./: .$Docs.drawio.bkp  Docs.drawio  README.md  TODO.md  blog_notes.txt  coverage.ps1  main.py  pyproject.toml  readme.py  requirements.txt  structure.py
.github/workflows/: main.yml  publish_to_pypi.yml
iterations/rfcs/: 0.rfc.md
iterations/v1/: README.md  __init__.py  __main__.py  names.txt  tidbytes_main.py  v1.py
iterations/v1/tests/: __init__.py  test_mem.py
iterations/v2/: codec.py  test_tidbytes.py
iterations/v3/: v3_test_tidbytes.py  von_neumann.v3.py
tests/: README.md  __init__.py  test-suite.json  test_idiomatic.py  test_idiomatic_mem.py  test_idiomatic_signed.py  test_idiomatic_str.py  test_idiomatic_unsigned.py  test_smoke.py  test_tidbytes.py  test_von_neumann.py  v3_test_tidbytes.py
tidbytes/: __init__.py  codec.py  idiomatic.py  idiomatic.v3.py  mem_types.py  natural.py  von_neumann.py
