[tool.poetry]
name = "tidbytes"
version = "0.1.0"
description = "Bit manipulation algebra with idiomatic interface"
authors = ["pebaz <pebazium@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tidbytes"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
